<resources>
    <!--  <string name=""></string>  -->
    <string name="app_name">GPSTreasureHunt</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="digButton">Dig!</string>
    <string name="buryButton">Bury some treasure</string>
    <string name="cancelButton">Stop the search</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="east">meters east</string>
    <string name="west">meters west</string>
    <string name="north">meters north</string>
    <string name="northeast">meters north east</string>
    <string name="northwest">meters north west</string>
    <string name="south">meters south</string>
    <string name="southeast">meters south east</string>
    <string name="southwest">meters south west</string>
    <string name="foundmarker">Next marker!</string>
    <string name="closeAlert">You are close!</string>
    <string name="foundTreasureAlert">You found the treasure!</string>
    <string name="foundMarkerAlert">You found a marker!</string>
    <string name="addWaypoint">Add a waypoint here</string>
    <string name="addMarkerError">Next marker must be between 5 and 25 meters away</string>
    <string name="finaliseButton">Finalize</string>
    <string name="finaliseError">Not enough waypoints to add route</string>
    <string name="addMarkerSuccess">Marker added to route</string>

</resources>